// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button (Delete) Snapshots renders a large, UDE delete button 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #de2e21;
  border-color: #de2e21;
  color: #ffffff;
  min-width: 112px;
  height: 48px;
  padding: 0 18px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #de2e21;
  color: #ffffff;
}

.emotion-1:hover:focus {
  background-color: #a31b12;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #80160E;
  border-color: transparent;
  color: #ffffff;
}

.emotion-1:hover {
  background-color: #a31b12;
  border-color: #a31b12;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #fcc9c5;
  border-color: transparent;
  color: #ffffff;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;

exports[`Button (Delete) Snapshots renders a large, delete button 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #ffefee;
  border-color: #ff5347;
  color: #de2e21;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
  font-weight: 500;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #ffefee;
  border-color: #005cb9;
  color: #de2e21;
}

.emotion-1:hover:focus {
  background-color: #ff5347;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #ffefee;
  border-color: #ff5347;
  color: #de2e21;
}

.emotion-1:hover {
  background-color: #ff5347;
  border-color: #a31b12;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #ffefee;
  border-color: #fcc9c5;
  color: #ff867d;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  border-color: #005cb9;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;

exports[`Button (Delete) Snapshots renders a medium, UDE delete button 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #de2e21;
  border-color: #de2e21;
  color: #ffffff;
  min-width: 96px;
  height: 40px;
  padding: 0 14px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #de2e21;
  color: #ffffff;
}

.emotion-1:hover:focus {
  background-color: #a31b12;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #80160E;
  border-color: transparent;
  color: #ffffff;
}

.emotion-1:hover {
  background-color: #a31b12;
  border-color: #a31b12;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #fcc9c5;
  border-color: transparent;
  color: #ffffff;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;

exports[`Button (Delete) Snapshots renders a medium, delete button 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #ffefee;
  border-color: #ff5347;
  color: #de2e21;
  height: 24px;
  padding: 0 24px;
  min-width: 80px;
  max-width: 200px;
  font-weight: 500;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #ffefee;
  border-color: #005cb9;
  color: #de2e21;
}

.emotion-1:hover:focus {
  background-color: #ff5347;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #ffefee;
  border-color: #ff5347;
  color: #de2e21;
}

.emotion-1:hover {
  background-color: #ff5347;
  border-color: #a31b12;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #ffefee;
  border-color: #fcc9c5;
  color: #ff867d;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  border-color: #005cb9;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;

exports[`Button (Delete) Snapshots renders a small, UDE delete button 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #de2e21;
  border-color: #de2e21;
  color: #ffffff;
  min-width: 80px;
  height: 32px;
  padding: 0 14px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #de2e21;
  color: #ffffff;
}

.emotion-1:hover:focus {
  background-color: #a31b12;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #80160E;
  border-color: transparent;
  color: #ffffff;
}

.emotion-1:hover {
  background-color: #a31b12;
  border-color: #a31b12;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #fcc9c5;
  border-color: transparent;
  color: #ffffff;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;

exports[`Button (Delete) Snapshots renders a small, delete button 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 10px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #ffefee;
  border-color: #ff5347;
  color: #de2e21;
  height: 18px;
  padding: 0 8px;
  min-width: 56px;
  max-width: 120px;
  font-weight: 500;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #ffefee;
  border-color: #005cb9;
  color: #de2e21;
}

.emotion-1:hover:focus {
  background-color: #ff5347;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #ffefee;
  border-color: #ff5347;
  color: #de2e21;
}

.emotion-1:hover {
  background-color: #ff5347;
  border-color: #a31b12;
  color: #ffffff;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #ffefee;
  border-color: #fcc9c5;
  color: #ff867d;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  border-color: #005cb9;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;
